@@ -1299,7 +1299,6 @@ tilepro_elf_check_relocs (bfd *abfd, struct bfd_link_info *info,
   struct tilepro_elf_link_hash_table *htab;
   Elf_Internal_Shdr *symtab_hdr;
   struct elf_link_hash_entry **sym_hashes;
-  bfd_vma *local_got_offsets;
   const Elf_Internal_Rela *rel;
   const Elf_Internal_Rela *rel_end;
   asection *sreloc;
@@ -1311,7 +1310,6 @@ tilepro_elf_check_relocs (bfd *abfd, struct bfd_link_info *info,
   htab = tilepro_elf_hash_table (info);
   symtab_hdr = &elf_tdata (abfd)->symtab_hdr;
   sym_hashes = elf_sym_hashes (abfd);
-  local_got_offsets = elf_local_got_offsets (abfd);
 
   sreloc = NULL;
 
